[project]
name = "ninja-raven"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.4",
    "django-dramatiq>=0.11.6",
    "django-ninja>=1.3.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "hiredis>=3.1.0",
    "redis>=5.2.1",
    "channels>=4.2.0",
    "django-cors-headers>=4.6.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.31.0",
]
